--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h2 class="h2 section-title">
               BENEFITS OF WORKING WITH Pirthe limited---
             </h2>
-            <ul class="grid-list">
+            <ul class="grid-list about-card">
               <!-- --------1 -->
               <li>
                 <div class="service-card">
@@ -2040,13 +2040,12 @@
                   <div class="card-content">
                     <h3 class="h3">
                       <a href="#" class="card-title">
-                        BEPZA – Exceling with the <br />
-                        AUDIT Software of Pirthe
+                        BEPZA – Exceling with the AUDIT Software of Pirthe
                       </a>
                     </h3>
                     <p class="card-text">
-                      Pirthe’s consistent high-quality support for <br />
-                      operation and maintenance led BEPZA.
+                      Pirthe’s consistent high-quality support for operation and
+                      maintenance led BEPZA.
                     </p>
                     <ul class="card-meta-list">
                       <li class="card-meta-item">
@@ -2082,13 +2081,12 @@
                   <div class="card-content">
                     <h3 class="h3">
                       <a href="#" class="card-title">
-                        Prosikha – Exceling with the <br />
-                        PFMS Software of Pirthe
+                        Prosikha – Exceling with the PFMS Software of Pirthe
                       </a>
                     </h3>
                     <p class="card-text">
-                      Pirthe’s consistent high-quality support for <br />
-                      operation and maintenance led Prosikha.
+                      Pirthe’s consistent high-quality support for operation and
+                      maintenance led Prosikha.
                     </p>
                     <ul class="card-meta-list">
                       <li class="card-meta-item">
@@ -2124,13 +2122,12 @@
                   <div class="card-content">
                     <h3 class="h3">
                       <a href="#" class="card-title">
-                        Land Ministry – Exceling with <br />
-                        the Software of Pirthe
+                        Land Ministry – Exceling with the Software of Pirthe
                       </a>
                     </h3>
                     <p class="card-text">
-                      Pirthe’s consistent support for operation and <br />
-                      maintenance led Land Case and sattalements.
+                      Pirthe’s consistent support for operation and maintenance
+                      led Land Case and sattalements.
                     </p>
                     <ul class="card-meta-list">
                       <li class="card-meta-item">
