--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <a href="#" class="navbar-link">Blog</a>
             </li>
             <li>
-              <a href="#" class="navbar-link">Contact</a>
+              <a href="#" class="navbar-link">Testimonials</a>
             </li>
           </ul>
           <div class="wrapper">
@@ -117,7 +117,7 @@
             </li>
           </ul>
         </nav>
-        <a href="#" class="btn btn-primary"> Free Trial </a>
+        <a href="#" class="btn btn-primary"> Portfolio</a>
         <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
           <i class="fa-solid fa-bars"></i>
         </button>
@@ -292,7 +292,7 @@
           </div>
         </section>
         <!-- ==========about card =========== -->
-        <section class="section service" aria-labelledby="service-label">
+        <section class="service" aria-labelledby="service-label">
           <div class="container">
             <!-- <p class="section-subtitle" id="service-label">What We Do?</p> -->
             <h2 class="h2 section-title">
@@ -1364,7 +1364,12 @@
                   of software in Bangladesh.
                 </p>
               </div>
-              <div class="clients_box_wrapper">
+              <div
+                class="clients_box_wrapper"
+                style="
+                  background: linear-gradient(45deg, #868ace, #a5a9f7, #a0a6ff);
+                "
+              >
                 <div class="grid-list clients_box">
                   <div class="client-logo user_img_1">
                     <img
