offer section modify

--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
 
                   <p class="section-title">
                     Pirthe Software Solutions offers our customers a wealth of
-                    technical and business expertise. We create diverse,
+                    technical and business expertise. <br>
+                     We create diverse,
                     complex, web and mobile solutions for any business need
                   </p>
                 </div>
@@ -1364,10 +1365,11 @@
                   of software in Bangladesh.
                 </p>
               </div>
+              <!-- #e1e4ff;  linear-gradient(45deg, #868ace, #a5a9f7, #a0a6ff); -->
               <div
                 class="clients_box_wrapper"
                 style="
-                  background: linear-gradient(45deg, #868ace, #a5a9f7, #a0a6ff);
+                  background:#e1e4ff;
                 "
               >
                 <div class="grid-list clients_box">
@@ -2017,7 +2019,7 @@
         <!-- ============== End work Section ========== -->
 
         <!-- projects -->
-        <section class="section project" aria-labelledby="project-label">
+        <section class="project" aria-labelledby="project-label">
           <div class="container">
             <div class="span_wrapper section-subtitle" id="p-top">
               <span>Recent Posts</span>
